# UniRank

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  skills-lock.json  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml
apps/insights/: README.md  package.json
data/: qs_worldwide_all_rankings_2026.manifest.json  qs_worldwide_all_rankings_2027.csv  qs_worldwide_all_rankings_2027.manifest.json  times_united-states_all_rankings_2026.csv  times_united-states_all_rankings_2026.manifest.json  times_worldwide_all_rankings_2026.manifest.json  usnews_united-states_all_rankings_2026-07-19.csv  usnews_united-states_all_rankings_2026-07-19.manifest.json  usnews_worldwide_all_rankings_2026-07-19.manifest.json
data/historical/: qs_worldwide_all_rankings_2018.csv  qs_worldwide_all_rankings_2018.manifest.json  qs_worldwide_all_rankings_2019.csv  qs_worldwide_all_rankings_2019.manifest.json  qs_worldwide_all_rankings_2020.csv  qs_worldwide_all_rankings_2020.manifest.json  qs_worldwide_all_rankings_2021.csv  qs_worldwide_all_rankings_2021.manifest.json  (+31 more)
insights/: README.md  package-lock.json  package.json
public/: robots.txt
scraper/: cli.ts  constants.ts  country.ts  http.ts  io.ts  normalizers.ts  orchestrator.ts  text.ts  tsconfig.json  types.ts
scripts/: __init__.py  generate_insights.py
tests/: foundation.test.ts  insights.test.ts  providers.test.ts  test_insights.py  test_scraper.py  ui.test.ts
university_ranking_scraper/: __init__.py  cli.py  constant.py  scraper.py
(+320 files in other folders)
